[gd_scene load_steps=59 format=2]

[ext_resource path="res://Images/Architecture/1.png" type="Texture2D" id=1]
[ext_resource path="res://ScenarioScene/Architecture/Architecture.gd" type="Script" id=2]
[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Images/Architecture/Flag.png" type="Texture2D" id=4]
[ext_resource path="res://Fonts/FZLB_GBK.TTF" type="FontFile" id=5]
[ext_resource path="res://ScenarioScene/Architecture/NumberFlashText.gd" type="Script" id=6]
[ext_resource path="res://ScenarioScene/Architecture/Routed.wav" type="AudioStream" id=7]
[ext_resource path="res://ScenarioScene/Architecture/Routed.png" type="Texture2D" id=8]
[ext_resource path="res://Images/TileEffect/Hit/Critical.png" type="Texture2D" id=9]
[ext_resource path="res://Images/TileEffect/Hit/Hit.png" type="Texture2D" id=10]

[sub_resource type="FontFile" id=1]
size = 42
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 50 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 2400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 2600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 2800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 3000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1920, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "Critical",
"speed": 30.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "Hit",
"speed": 30.0
} ]

[sub_resource type="FontFile" id=48]
size = 32
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
spacing_top = -5
spacing_bottom = -5
font_data = ExtResource( 5 )

[node name="Architecture" type="Node2D"]
scale = Vector2( 0.32, 0.32 )
script = ExtResource( 2 )

[node name="Flag" type="Sprite2D" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 42, -42 )

[node name="SpriteArea" type="Area2D" parent="."]
position = Vector2( 75, 75 )
scale = Vector2( 1.5, 1.5 )

[node name="Sprite2D" type="Sprite2D" parent="SpriteArea"]
texture = ExtResource( 1 )

[node name="Title" type="CenterContainer" parent="SpriteArea/Sprite2D"]
anchor_right = 1.0
offset_left = -30.0
offset_top = -80.0
offset_right = -80.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SpriteArea/Sprite2D/Title"]
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
minimum_size = Vector2( 250, 50 )
mouse_filter = 2
color = Color( 0, 0, 0, 0.3 )

[node name="Label" type="Label" parent="SpriteArea/Sprite2D/Title"]
offset_left = 35.0
offset_top = 1.0
offset_right = 214.0
offset_bottom = 48.0
size_flags_horizontal = 6
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "北郡 東北"
align = 1

[node name="ClickArea" type="CollisionShape2D" parent="SpriteArea"]
shape = SubResource( 2 )

[node name="Routed" type="AnimatedSprite2D" parent="SpriteArea"]
visible = false
frames = SubResource( 11 )

[node name="RoutedSound" type="AudioStreamPlayer" parent="SpriteArea/Routed"]
stream = ExtResource( 7 )

[node name="EffectSprite" type="AnimatedSprite2D" parent="SpriteArea"]
visible = false
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 47 )
animation = "Hit"

[node name="NumberFlashText" type="Label" parent="."]
offset_right = 152.0
offset_bottom = 152.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 48 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="NumberFlashText"]
one_shot = true
[connection signal="input_event" from="SpriteArea" to="." method="_on_SpriteArea_input_event"]
[connection signal="animation_finished" from="SpriteArea/Routed" to="." method="_on_Routed_animation_finished"]
[connection signal="animation_finished" from="SpriteArea/EffectSprite" to="." method="_on_EffectSprite_animation_finished"]
[connection signal="timeout" from="NumberFlashText/Timer" to="NumberFlashText" method="_on_Timer_timeout"]
